deploy/kubernetes/endpointslice/balancer-service-account-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: balancer
  namespace: load-balancer
spec:
  template:
    spec:
      containers:
        - name: balancer
